Added the link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <h1>World Clock</h1>
-    <footer>This project was coded by Zuzanna Kuczynska-Cisowska and it's open sourced on <a href=""
-            target="_blank">GitHub</a></footer>
+    <footer>This project was coded by Zuzanna Kuczynska-Cisowska and it's open sourced on <a
+            href="https://github.com/sushannahk/world-clock" target="_blank">GitHub</a></footer>
     <script src="src/index.js">
     </script>
 </body>
