Added the basic HTML schema

--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-    <h1>World Clock</h1>
+    <div>
+        <h1>World Clock</h1>
+        <select name="" id="">
+            <option value="">Choose a city</option>
+            <option value="">Warsaw</option>
+            <option value="">New York</option>
+            <option value="">Paris/option>
+        </select>
+        <div class="city">
+            <h2>London 🇬🇧</h2>
+            <div class="date">October 19th 2023</div>
+            <div class="time">10:16:10 AM</div>
+        </div>
+
+        <div class="city">
+            <h2>Paris 🇫🇷</h2>
+            <div class="date">October 19th 2023</div>
+            <div class="time">11:16:10 AM</div>
+        </div>
+    </div>
+
     <footer>This project was coded by Zuzanna Kuczynska-Cisowska and it's open sourced on <a
             href="https://github.com/sushannahk/world-clock" target="_blank">GitHub</a></footer>
     <script src="src/index.js">
