Styled the app with CSS

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
     <title>World Clock by Zuzanna Kuczynska-Cisowska</title>
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <h1>World Clock</h1>
         <select name="" id="">
             <option value="">Choose a city</option>
@@ -18,19 +23,25 @@
             <option value="">Paris/option>
         </select>
         <div class="city">
-            <h2>London 🇬🇧</h2>
-            <div class="date">October 19th 2023</div>
-            <div class="time">10:16:10 AM</div>
+            <div>
+                <h2>London 🇬🇧</h2>
+                <div class="date">October 19th 2023</div>
+            </div>
+
+            <div class="time">10:16:10 <small>AM</small></div>
         </div>
 
         <div class="city">
-            <h2>Paris 🇫🇷</h2>
-            <div class="date">October 19th 2023</div>
-            <div class="time">11:16:10 AM</div>
+            <div>
+                <h2>Paris 🇫🇷</h2>
+                <div class="date">October 19th 2023</div>
+            </div>
+
+            <div class="time">11:16:10 <small>AM</small></div>
         </div>
     </div>
 
-    <footer>This project was coded by Zuzanna Kuczynska-Cisowska and it's open sourced on <a
+    <footer>This project was coded by 👩‍💻 <strong>Zuzanna Kuczyńska-Cisowska</strong> and it's open sourced on <a
             href="https://github.com/sushannahk/world-clock" target="_blank">GitHub</a></footer>
     <script src="src/index.js">
     </script>
