--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="src/styles.css">
     <title>World Clock by Zuzanna Kuczynska-Cisowska</title>
 </head>
@@ -22,22 +25,22 @@
             <option value="">New York</option>
             <option value="">Paris/option>
         </select>
-        <div class="city">
+        <div class="city" id="london">
             <div>
                 <h2>London 🇬🇧</h2>
-                <div class="date">October 19th 2023</div>
+                <div class="date"></div>
             </div>
 
-            <div class="time">10:16:10 <small>AM</small></div>
+            <div class="time"></div>
         </div>
 
-        <div class="city">
+        <div class="city" id="paris">
             <div>
                 <h2>Paris 🇫🇷</h2>
-                <div class="date">October 19th 2023</div>
+                <div class="date"></div>
             </div>
 
-            <div class="time">11:16:10 <small>AM</small></div>
+            <div class="time"></div>
         </div>
     </div>
 
