Added function to handle changes in city select

--- a/index.html
+++ b/index.html
@@ -19,28 +19,30 @@
 <body>
     <div class="container">
         <h1>World Clock</h1>
-        <select name="" id="">
+        <select name="" id="city">
             <option value="">Choose a city</option>
-            <option value="">Warsaw</option>
-            <option value="">New York</option>
-            <option value="">Paris/option>
+            <option value="Europe/Warsaw">Warsaw</option>
+            <option value="America/New_York">New York</option>
+            <option value="Europe/Paris">Paris</option>
         </select>
-        <div class="city" id="london">
-            <div>
-                <h2>London 🇬🇧</h2>
-                <div class="date"></div>
+        <div id="cities">
+            <div class="city" id="london">
+                <div>
+                    <h2>London 🇬🇧</h2>
+                    <div class="date"></div>
+                </div>
+
+                <div class="time"></div>
             </div>
 
-            <div class="time"></div>
-        </div>
+            <div class="city" id="paris">
+                <div>
+                    <h2>Paris 🇫🇷</h2>
+                    <div class="date"></div>
+                </div>
 
-        <div class="city" id="paris">
-            <div>
-                <h2>Paris 🇫🇷</h2>
-                <div class="date"></div>
+                <div class="time"></div>
             </div>
-
-            <div class="time"></div>
         </div>
     </div>
 
