--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 
 <body>
     <div class="container">
-        <h1>World Clock</h1>
+        <h1>
+            <a href="/">World Clock</a>
+        </h1>
         <select name="" id="city">
             <option value="">Choose a city</option>
+            <option value="current-location">My location</option>
             <option value="Europe/Warsaw">Warsaw</option>
             <option value="America/New_York">New York</option>
             <option value="Europe/Paris">Paris</option>
