Added more cities to the select

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
             <option value="">Choose a city</option>
             <option value="current-location">My location</option>
             <option value="Europe/Warsaw">Warsaw</option>
+            <option value="Europe/London">London</option>
             <option value="America/New_York">New York</option>
             <option value="Europe/Paris">Paris</option>
+            <option value="Asia/Tokyo">Tokyo</option>
+            <option value="Asia/Shanghai">Shanghai</option>
+            <option value="America/Sao_Paulo">Sao Paulo</option>
+            <option value="Europe/Moscow">Moscow</option>
+
         </select>
         <div id="cities">
             <div class="city" id="london">
